# kubectl-openstack-plugin

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  README.md  TODO.md  WORKSPACE  build.sh  go.mod  go.sum  godeps.bash  install.sh  repositories.bzl  run.sh
.github/: main.workflow
bazel/: print-workspace-status.sh  version.sh
cmd/: BUILD.bazel  kubectl-os.go
cmd/kubectl-openstack/: BUILD.bazel  kubectl-openstack.go
cmd/kubectl-os/: BUILD.bazel  kubectl-os.go
krew/: install.sh  os.yaml
pkg/cmd/: BUILD.bazel  config_import.go  kubernetes.go  lb.go  openstack.go  os.go  server.go  table.go  volume-fix.go  volume.go
pkg/kubernetes/: BUILD.bazel  kubernetes.go
pkg/openstack/: BUILD.bazel  openstack.go
pkg/output/: BUILD.bazel  table.go
pkg/output/mattermost/: BUILD.bazel  mattermost.go  mattermost_test.go
pkg/util/: BUILD.bazel
