load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["kubectl-openstack.go"],
    importpath = "github.com/sbueringer/kubectl-openstack-plugin/cmd/kubectl-openstack",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
        "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
    ],
)

go_binary(
    name = "kubectl-openstack",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "kubectl-openstack_tar",
    srcs = [":kubectl-openstack"],
    extension = "tar.gz",
)
