load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config_import.go",
        "lb.go",
        "os.go",
        "server.go",
        "volume.go",
        "volume-fix.go",
    ],
    importpath = "github.com/sbueringer/kubectl-openstack-plugin/pkg/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kubernetes:go_default_library",
        "//pkg/openstack:go_default_library",
        "//pkg/output:go_default_library",
        "//pkg/output/mattermost:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/blockstorage/v3/volumes:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/compute/v2/servers:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/layer3/floatingips:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/listeners:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/loadbalancers:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/monitors:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/pools:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
        "@io_k8s_cli_runtime//pkg/genericclioptions:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/clientcmd/api:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
