load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["openstack.go"],
    importpath = "github.com/sbueringer/kubectl-openstack-plugin/pkg/openstack",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gophercloud_gophercloud//:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/blockstorage/v3/volumes:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/compute/v2/servers:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/layer3/floatingips:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/listeners:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/loadbalancers:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/monitors:go_default_library",
        "@com_github_gophercloud_gophercloud//openstack/networking/v2/extensions/lbaas_v2/pools:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
