load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["table.go"],
    importpath = "github.com/sbueringer/kubectl-openstack-plugin/pkg/output",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/olekukonko/tablewriter:go_default_library"],
)
